--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   </div>
   <div class="w-layout-blockcontainer container-4 w-container">
     <div class="div-block"><br><br><br>OpenMedCalc is an open-source medical calculation API created to meet the standards of modern web protocols. <br><br>It is compatible with OpenAPI and is able to be integrated with AI chatbots.<br><br><br>‍</div>
-    <a href="index.html" aria-current="page" class="button-2 w-button w--current">Meet our chatbot</a>
-    <a href="http://github.com/alexgoodell/openmedcalc" class="button-2 w-button">Contribute on GitHub</a>
-    <a href="https://api.openmedcalc.org" class="button-2 w-button">API documentation</a>
+    <a href="https://chat.openai.com/g/g-mtNkUsX41-openmedcalc" aria-current="page" class="button-2 w-button w--current">Meet our chatbot</a>
+    <a href="http://github.com/alexgoodell/open-med-calc" class="button-2 w-button">Contribute on GitHub</a>
+    <a href="https://api.openmedcalc.org/docs" class="button-2 w-button">API documentation</a>
   </div>
   <div class="w-layout-blockcontainer container-2 w-container">
     <div class="div-block"></div>
