--- a/contact.html
+++ b/contact.html
@@ -39,9 +39,9 @@
   <div class="w-layout-blockcontainer container-4 w-container">
     <div class="div-block"><br><br><br>OpenMedCalc is an open-source medical calculation API created to meet the standards of modern web protocols. <br><br>Get ahold of us at <a href="mailto:info@openmedcalc.org?subject=openmedcalc">info@openmedcalc.org</a><br><br><br>‍</div>
     <div class="w-embed"></div>
-    <a href="#" class="button-2 w-button">Meet our chatbot</a>
-    <a href="#" class="button-2 w-button">Contribute on GitHub</a>
-    <a href="#" class="button-2 w-button">API documentation</a>
+    <a href="https://chat.openai.com/g/g-mtNkUsX41-openmedcalc" class="button-2 w-button">Meet our chatbot</a>
+    <a href="http://github.com/alexgoodell/open-med-calc" class="button-2 w-button">Contribute on GitHub</a>
+    <a href="https://api.openmedcalc.org/docs" class="button-2 w-button">API documentation</a>
   </div>
   <div class="w-layout-blockcontainer container-2 w-container">
     <div class="div-block"></div>
