--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -26,10 +26,9 @@
         <div class="text-block">OpenMedCalc</div>
       </a>
       <nav role="navigation" class="w-nav-menu">
-        <a href="#" class="nav-link w-nav-link"></a>
         <a href="index.html" class="nav-link-2 w-nav-link">Home</a>
-        <a href="#" class="nav-link-2 w-nav-link">Contact</a>
-        <a href="terms.html" class="w-nav-link">About</a>
+        <a href="contact.html" class="nav-link-2 w-nav-link">Contact</a>
+        <a href="terms.html" class="nav-link-2 w-nav-link">About</a>
       </nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
