--- a/public_html/index.html
+++ b/public_html/index.html
@@ -24,10 +24,9 @@
         <div class="text-block">OpenMedCalc</div>
       </a>
       <nav role="navigation" class="w-nav-menu">
-        <a href="#" class="nav-link w-nav-link"></a>
-        <a href="index.html" aria-current="page" class="nav-link-2 w-nav-link w--current">Home</a>
-        <a href="#" class="nav-link-2 w-nav-link">Contact</a>
-        <a href="terms.html" class="w-nav-link">About</a>
+        <a href="index.html" class="nav-link-2 w-nav-link">Home</a>
+        <a href="contact.html" class="nav-link-2 w-nav-link">Contact</a>
+        <a href="terms.html" class="nav-link-2 w-nav-link">About</a>
       </nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
@@ -35,7 +34,7 @@
     </div>
   </div>
   <div class="w-layout-blockcontainer container-4 w-container">
-    <div class="div-block"><br><br><br>OpenMedCalc is an open-source medical calculation API created to meet the standards of modern web protocols. <br><br>It is compatible with OpenAPI and is able to be integrated with AI chatbots.<br><br><br>‍</div>
+    <div class="div-block"><br><br><br>OpenMedCalc is an open-source medical calculation API created to meet the standards of modern web protocols. <br><br>It is compatible with the <a href="https://www.openapis.org">OpenAPI specification</a>, is built with <a href="https://fastapi.tiangolo.com">FastAPI</a> with the <a href="https://swagger.io">Swagger IU</a> and is easily integrated with AI chatbots.<br><br><br> </div>
     <a href="https://chat.openai.com/g/g-mtNkUsX41-openmedcalc" aria-current="page" class="button-2 w-button w--current">Meet our chatbot</a>
     <a href="http://github.com/alexgoodell/open-med-calc" class="button-2 w-button">Contribute on GitHub</a>
     <a href="https://api.openmedcalc.org/docs" class="button-2 w-button">API documentation</a>
